# hicn

./: .cz.toml  .dockerignore  .git_commit_template.txt  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile.dev  INFO.yaml  Makefile  README.md  groups  pom.xml  project.config  q  versions.cmake
apps/: .clang-format  CMakeLists.txt  README.md
apps/cmake/: packaging.cmake
apps/cmake/Modules/: Packaging.cmake
apps/higet/: CMakeLists.txt  higet.cc
apps/hiperf/: CMakeLists.txt
apps/hiperf/src/: client.cc  client.h  common.h  forwarder_config.h  forwarder_interface.cc  forwarder_interface.h  main.cc  server.cc  server.h
apps/http-proxy/: CMakeLists.txt  main.cc
apps/http-proxy/src/: ATSConnector.cc  ATSConnector.h  HTTP1.xMessageFastParser.cc  HTTP1.xMessageFastParser.h  IcnReceiver.cc  IcnReceiver.h  forwarder_config.h  forwarder_interface.cc  forwarder_interface.h  http_1x_message_fast_parser.cc  http_proxy.cc  http_proxy.h  http_session.cc  http_session.h  icn_receiver.cc  icn_receiver.h
apps/http-server/: CMakeLists.txt  config.h.in  http-server.cc
apps/http-server/http-client/: http_client.h  http_client_icn.cc  http_client_icn.h  http_client_tcp.cc  http_client_tcp.h
apps/http-server/http-server/: common.h  configuration.cc  configuration.h  content.cc  content.h  http_server.cc  http_server.h  icn_request.cc  icn_request.h  icn_response.cc  icn_response.h  request.cc  request.h  response.cc  response.h  socket_request.cc  socket_request.h  socket_response.cc  socket_response.h
apps/ping/: CMakeLists.txt
apps/ping/src/: ping_client.cc  ping_server.cc
apps/src/: higet.cc
apps/src/higet/: CMakeLists.txt  higet.cc
apps/src/http-proxy/: CMakeLists.txt  main.cc
apps/src/http-server/: CMakeLists.txt  config.h.in  http-server.cc
ctrl/: .clang-format  CMakeLists.txt
ctrl/facemgr/: CMakeLists.txt  README.md
ctrl/facemgr/cmake/: packaging.cmake
ctrl/facemgr/config/: facemgr.conf  facemgr.service  post  postinst  prerm
ctrl/facemgr/doc/: interface.md
ctrl/facemgr/examples/: facemgr.conf  run-bonjour.sh
ctrl/facemgr/includes/: CMakeLists.txt  facemgr.h
ctrl/facemgr/src/: CMakeLists.txt  api.c  cache.c  cache.h  cfg.c  cfg_file.c  cfg_file.h  common.h  error.c  error.h  event.c  event.h  face.c  face.h  face_cache.c  face_cache.h  face_rules.c  face_rules.h  facelet.c  facelet.h  facelet_array.c  facelet_array.h  facemgr.c  facemgr.h  interface.c  interface.h  interface_map.c  interface_map.h  interface_ops_map.c  interface_ops_map.h  (+5 more)
ctrl/libhicnctrl/: CMakeLists.txt
ctrl/sysrepo-plugins/: AUTHORS  CMakeLists.txt  README.md
docs/doxygen/: CMakeLists.txt  Doxyfile.in
extras/: CMakeLists.txt
extras/hicn-extra-plugin/: CMakeLists.txt  README.md
extras/libmemif/: CMakeLists.txt  CMakeLists1.patch  CMakeLists2.patch
extras/libyang/: CMakeLists.txt  libyang.patch
extras/packethicn/: CMakeLists.txt  README.md  install_macos.sh  packet-hicn.c
extras/router-plugin/: CMakeLists.txt
extras/sysrepo/: CMakeLists.txt  sysrepo.patch
hicn-light/: .clang-format  CMakeLists.txt  README.md
hicn-light/cmake/: packaging.cmake
hicn-light/config/: hicn-light.service  post  postinst  postun  prerm
hicn-light/src/: CMakeLists.txt  config.h.in
hicn-plugin/: .clang-format  AUTHORS  CMakeLists.txt  README.md
hicn-plugin/cmake/: packaging.cmake
hicn-plugin/libvapi-safe/: CMakeLists.txt
hicn-plugin/scripts/: post  postinst  postun
hicn-plugin/src/: CMakeLists.txt  cli.c  data_fwd.h  data_fwd_node.c  data_input_node.c  data_pcslookup.h  data_pcslookup_node.c  data_push_node.c  error.c  error.h  face_db.h  hashtb.c  hashtb.h  hicn.api  hicn.c  hicn.h  hicn_all_api_h.h  hicn_api.c  hicn_api.h  hicn_api_test.c  hicn_buffer.h  hicn_buffer_flags.h  hicn_logging.h  hicn_msg_enum.h  hicn_plugin.c  infra.c  infra.h  interest_hitcs.h  interest_hitcs_node.c  interest_hitpit.h  interest_hitpit_node.c  interest_pcslookup.h  interest_pcslookup_node.c  mapme.h  mapme_ack.h  mapme_ack_node.c  mapme_ctrl.h  mapme_ctrl_node.c  mapme_eventmgr.c  mapme_eventmgr.h  (+26 more)
hicn-plugin/testbed/: Dockerfile  docker-compose.yaml  startup-client-dpdk.txt  startup-client.conf  startup-client.txt  startup-server-dpdk.txt  startup-server.conf  startup-server.txt
hicn-plugin/vapi/: CMakeLists.txt  libsafevapi-config.cmake.in  vapi_safe.c
hicn_hs/: CMakeLists.txt  cbr_proto.c  error.c  error.h  hicn_hs.c  hicn_hs.h  hicn_hs_cli.c  hicn_hs_inlines.h  hicn_hs_input.c  hicn_hs_output.c  hicn_hs_prod_dpo.c  hicn_hs_prod_dpo.h  hicn_hs_route.c  hicn_hs_route.h  hicn_hs_utils.h
hicn_hs/errors/: hicn_hs.def  hicn_hs_output_node.def
hicn_hs/test/: hicn_hs_client.c  hicn_hs_client.h  hicn_hs_server.c
hicn_hs/testbed/: Dockerfile  client-startup.txt  run-client-server.sh  server-startup.txt  startup-client.conf  startup-server.conf
lib/: .clang-format  CMakeLists.txt  README.md
lib/cmake/: packaging.cmake
lib/doc/: CMakeLists.txt  Doxyfile.in
lib/includes/: CMakeLists.txt
lib/src/: CMakeLists.txt  base.c  base.h  common.c  common.h  compat.c  compat.h  error.c  error.h  face.c  header.h  hicn.h  libhicn-config.cmake.in  mapme.c  mapme.h  name.c  name.h  ops.c  ops.h  packet.c  policy.c  protocol.h  strategy.c
libtransport/: .clang-format  AUTHORS  CMakeLists.txt  README.md  format_all.sh
libtransport/cmake/: packaging.cmake
libtransport/src/: CMakeLists.txt  config.h.in  libhicntransport-config.cmake.in  transport.config
telemetry/: .clang-format  CMakeLists.txt  collectd.conf  data_model.h
telemetry/cmake/: packaging.cmake
telemetry/hicn-light-collectd/: CMakeLists.txt  hicn_light.c
telemetry/kafka-collectd/: CMakeLists.txt  format_influxdb.c  format_influxdb.h  write_kafka_line_protocol.c
telemetry/vpp-collectd/: CMakeLists.txt  README.md  custom_types.db
utils/: CMakeLists.txt  README.md
utils/extras/: CMakeLists.txt  README.md
utils/src/: hiperf.cc  ping_client.cc  ping_server.cc
utils/sysrepo-plugin/: CMakeLists.txt  README.md
utils/sysrepo-plugins/: CMakeLists.txt  README.md
(+2055 files in other folders)
